<resources>

    <string name="app_name">Teachers List</string>
    <string name="favorites">Favorite Teachers</string>
    <string name="no_data_available">No Data Found!</string>
    <string name="no_favorites_available">No favorite found!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Try Again</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="title_profile">Teacher Profile</string>
    <string name="age">Age: %1$s</string>
    <string name="coins">Coins: %1$s</string>
    <string name="name">Name: %1$s</string>



</resources>