<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_home_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/title_profile"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:strokeColor="?android:textColorHighlight"
                app:strokeWidth="3dp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_name"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image">


                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_medium"

                    android:textColor="?android:textColorPrimary"
                    android:textSize="22sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_share"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/mc_profile_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_name">

                <TextView
                    android:id="@+id/tv_profile_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_regular"

                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_profile_contact"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mc_profile_share"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_name">

                <TextView
                    android:id="@+id/tv_profile_coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_regular"

                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_about"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mc_profile_contact">

                <TextView
                    android:id="@+id/tv_Profile_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/roboto_medium"

                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp" />


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
